--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,10 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/portfolio">Portfolio</a></li>
+		        	<li><a href="/about">about</a></li>
+	        		<li><a href="/cv">cv</a></li>
+	        		<li><a href="/portfolio">portfolio</a></li>
+				<li><a href="/blog">blog</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
