--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,22 @@
 body {
     margin: 60px auto;
     width: 70%;
+    height: 100%;
 }
+
+.bg { 
+  /* The image used */
+  background-image: url("img_girl.jpg");
+
+  /* Full height */
+  height: 100%; 
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
