--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
 		        	<li><a href="/about">about</a></li>
 	        		<li><a href="/cv">cv</a></li>
 	        		<li><a href="/portfolio">portfolio</a></li>
+				<li><a href="/test">test</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
