--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,9 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">home</a></li>
-		        	<li><a href="/about">about</a></li>
 	        		<li><a href="/cv">cv</a></li>
-	        		<li><a href="/portfolio">portfolio</a></li>
-				<li><a href="/test">test</a></li>
+	        		<li><a href="/portfolio">academia</a></li>
+				<li><a href="/about">work</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
