--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 	    		<ul>
 	        		<li><a href="/">home</a></li>
 	        		<li><a href="/cv">cv</a></li>
-	        		<li><a href="/portfolio">academia</a></li>
-				<li><a href="/about">work</a></li>
+	        		<li><a href="/academia">academia</a></li>
+				<li><a href="/portfolio">work</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
