--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 body {
-    margin: 60px auto;
-    width: 70%;
+    background-color: #ffbb99;
+    color: inherit;
+    font-family: 'Georgia', serif;
+    margin: 2em;
+    padding: 0 3em 3em 5em;
 }
 
 nav ul, footer ul {
