--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,10 @@ a {
     color: #999;
 }
 a:hover {
-    text-decoration: underline;
+    text-decoration: line-through;
 }
 h1 {
-    font-size: 3em;
+    font-size: 2em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
 p {
