--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,14 @@
 body {
     margin: 60px auto;
     width: 70%;
+    text-align: center; 
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
     list-style: none;
     font-weight: bold;
+    text-align: center;
 }
 nav ul li, footer ul li {
     display: inline;
