--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,11 @@ p {
     line-height: 1.4em;
     color: #333;
 }
+ul {
+    list-style: none;
+    margin: 20px auto 40px
+    padding: 0   
+}
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
