--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #132639;
+    color: #1a1a1a;
 }
 a:hover {
     text-decoration: line-through;
