--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    font-size: 40px;
     padding: 0px;
     list-style: none;
     font-weight: bold;
