--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ footer ul {
     padding: 0px;
     list-style: none;
     font-weight: bold;
-    text-align: center;
+    text-align: right;
 }
 nav ul li, footer ul li {
     display: inline;
