--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     width: 70%;
 }
 nav ul {
-    font-family:'American Typewriter', 'serf';
+    font-family:'American Typewriter', 'serif';
     font-size: 25px;
     padding: 0px;
     list-style: none;
@@ -11,7 +11,7 @@ nav ul {
     text-align: center;
 }
 footer ul {
-    font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+    font-family:'American Typewriter', 'serif';
     font-size: 15px;
     padding: 0px;
     list-style: none;
