--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ a:hover {
 h1 {
     font-size: 2em;
     font-family:'American Typewriter', 'serif';
+    color: #2A2A2A
 }
 p {
     font-size: 1.5em;
