--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<body>
 			<nav>
 	    		<ul>
-	        		<li><a href="/">home</a></li>
+	        		<li><a href="/about">about</a></li>
 	        		<li><a href="/cv">cv</a></li>
 	        		<li><a href="/academia">academia</a></li>
 				<li><a href="/portfolio">work</a></li>
