--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ a:hover {
     text-decoration: line-through;
     
 }
+figure {
+    margin: 0 auto;
+    padding: 10px;
+}
 .blurb {
     margin: 0 auto;
     padding: 10px;
