--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:spangler.sydney@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/sydneyspangler">github.com/sydneyspangler</a></li>
+	        		<li><a href="https://sydneyspangler.github.io">sydney spangler</a></li>
 				</ul>
 			</footer>
 		</body>
