--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {
     width: 70%;
 }
 nav ul {
-    font-family:'American Typewriter', 'serif';
+    font-family:'Palatino Linotype', 'serif';
     font-size: 25px;
     padding: 0px;
     list-style: none;
@@ -12,7 +12,7 @@ nav ul {
     padding: 5px;
 }
 footer ul {
-    font-family:'American Typewriter', 'serif';
+    font-family:'Palatino Linotype', 'serif';
     font-size: 15px;
     padding: 0px;
     list-style: none;
@@ -53,18 +53,18 @@ img {
 }
 h1 {
     font-size: 2em;
-    font-family:'American Typewriter', 'serif';
+    font-family:'Palatino Linotype', 'serif';
     color: #2A2A2A
 }
 h2 {
     font-size: 1.5em;
-    font-family:'American Typewriter', 'serif';
+    font-family:'Palatino Linotype', 'serif';
     color: #2A2A2A
 }
 p {
     font-size: 1.5em;
     line-height: 1.4em;
-    font-family:'American Typewriter', 'serif';
+    font-family:'Palatino Linotype', 'serif';
     text-align: left; 
     color: #292929
 }
@@ -72,7 +72,7 @@ ul {
     list-style: none;
     padding: 0;
     margin: 0;
-    font-family:'American Typewriter', 'serif';
+    font-family:'Palatino Linotype', 'serif';
     color: #292929
 }
 li {
