--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #1a1a1a;
+    color: #0d0d0d;
 }
 a:hover {
     text-decoration: line-through;
