--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ nav ul {
     list-style: none;
     font-weight: bold;
     text-align: center;
+    color: #0d0d0d;
 }
 footer ul {
     font-family:'Palatino Linotype', 'serif';
@@ -32,7 +33,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #0d0d0d;
+    color: #ff7733;
 }
 a:hover {
     text-decoration: line-through;
