--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,7 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #527a7a;
+    color: #2ec3de;
 }
 a:hover {
     text-decoration: line-through;
