--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-	<html lang="en">
+	<html lang="en" id="home">
 		<head>
 			<title>{{ page.title }}</title>
 			<!-- link to home stylesheet -->
