--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,11 @@ figure {
     margin: 0 auto;
     padding: 50px;
 }
+#pic{
+    margin: auto;
+    margin-top: 200px;
+}
+
 img {
     border-radius: 8px;
     max-width: 100%;
