--- a/css/main.css
+++ b/css/main.css
@@ -71,12 +71,12 @@ img {
 h1 {
     font-size: 2em;
     font-family:'Palatino Linotype', 'serif';
-    color: #2A2A2A
+    color: #333333
 }
 h2 {
     font-size: 1.5em;
     font-family:'Palatino Linotype', 'serif';
-    color: #2A2A2A
+    color: #333333
 }
 p {
     font-size: 1.5em;
