--- a/css/main.css
+++ b/css/main.css
@@ -90,10 +90,12 @@ ul {
     padding: 0;
     margin: 0;
     font-family:'Palatino Linotype', 'serif';
+    font-size: 1.5em;
     color: #292929
 }
 li {
     padding-left: 16px;
+    font-size: 1.5em;
 }
 footer {
     border-top: 1px solid #d5d5d5;
